fix: spacing between project/context select and add button

--- a/frontend/src/pages/AppPage/Tasks/TaskForm.scss
+++ b/frontend/src/pages/AppPage/Tasks/TaskForm.scss
@@ -52,7 +52,10 @@
 
 .footer__form {
     display: flex;
-    justify-content: space-between;
+
+    &>*:last-child {
+        margin-left: auto;
+    }
 }
 
 .select__form {
